# DopFoneRobustnessMVP

./: README.md
radar-sense-mvp/: .coverage  MASTER_LOG.md  README.md  pyproject.toml  requirements.txt  run_local_master_stats.py
radar-sense-mvp/configs/: benchmark.yaml  generation.yaml  testing.yaml
radar-sense-mvp/data/manifests/: benchmark_results.json  benchmark_results.jsonl  benchmark_summary.json  clean_manifest.jsonl  perturbed_manifest.jsonl
radar-sense-mvp/data/perturbed/: clean-120-0-attenuation-sev0.25-s9.npy  clean-120-0-attenuation-sev0.75-s9.npy  clean-120-0-dropout-sev1.0-s8.npy  clean-120-0-gaussian_noise-sev0.25-s7.npy  clean-120-0-gaussian_noise-sev0.5-s7.npy  clean-120-0-gaussian_noise-sev0.75-s8.npy  clean-120-0-gaussian_noise-sev0.75-s9.npy  clean-120-0-gaussian_noise-sev1.0-s7.npy  clean-120-1-dropout-sev0.25-s8.npy  clean-120-1-gaussian_noise-sev0.25-s8.npy  clean-120-1-gaussian_noise-sev0.5-s8.npy  (+50 more)
radar-sense-mvp/docs/: architecture.md  datatype_specs.md  function_specs.md
radar-sense-mvp/scripts/: build_clean_dataset.py  build_perturbed_dataset.py  run_benchmark.py  summarize_results.py
radar-sense-mvp/slurm/: benchmark_array.slurm  generate_array.slurm
radar-sense-mvp/src/: __init__.py
radar-sense-mvp/tests/: test_attenuation.py  test_benchmark_result.py  test_dataset_builder.py  test_doppler_like.py  test_dropout.py  test_generator.py  test_heartbeat.py  test_metrics.py  test_noise.py  test_peak_estimator.py  test_preprocess.py  test_registry.py  test_runner.py  test_signal_example.py  test_utils.py
(+23 files in other folders)
